--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "pages": [
     "pages/login/login",
-    "pages/index/index"
+    "pages/index/index",
+    "pages/other/other"
   ],
   "window": {
     "navigationBarTextStyle": "black",
@@ -11,5 +12,23 @@
   "style": "v2",
   "componentFramework": "glass-easel",
   "sitemapLocation": "sitemap.json",
-  "lazyCodeLoading": "requiredComponents"
+  "lazyCodeLoading": "requiredComponents",
+  "tabBar": {
+    "backgroundColor": "#f5f6f7",
+    "list": [
+      {
+        "pagePath": "pages/index/index",
+        "text": "首页",
+        "iconPath": "/images/home.png",
+        "selectedIconPath": "/images/home.png"
+      },
+      {
+        "pagePath": "pages/other/other",
+        "text": "其他",
+        "iconPath": "/images/other.png",
+        "selectedIconPath": "/images/other.png"
+      }
+    
+    ]
+  }
 }
